<resources>
    <string name="app_name">Zadanie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_data">Zadať prihlasovacie údaje</string>
    <string name="register_data">Zadať údaje pre registráciu</string>
    <string name="enter_login">Prihlasovacie meno*</string>
    <string name="enter_password">Heslo*</string>
    <string name="enter_password_again">Zopakovať heslo*</string>
    <string name="register">Registrovať sa</string>
    <string name="registration">Registrácia</string>
    <string name="login">Prihlásiť sa</string>
    <string name="logout">Odhlásiť sa</string>
    <string name="logination">Prihlásenie</string>
    <string name="bar_name">Názov podniku</string>
    <string name="visitor_count">%d</string>
    <string name="open_gps">Ukáž na mape</string>
    <string name="open_web">Ukáž na webe</string>
    <string name="add_friend_data">Zadaj prihlasovacie meno priateľa</string>
    <string name="enter_friend_login">Zadať prihlasovacie meno priateľa</string>
    <string name="add_friend">Pridať priateľa</string>
    <string name="show_friends">Zobraziť priateľov</string>
    <string name="friends_list_data">Zoznam priateľov</string>
    <string name="tag_bar">Pridať sa do podniku</string>
    <string name="sort_bars_users_count_asc">Zoradiť podľa počtu ľudí vzostupne</string>
    <string name="sort_bars_users_count_desc">Zoradiť podľa počtu ľudí zostupne</string>
    <string name="sort_bars_distance_asc">Zoradiť podľa vzdialenosti vzostupne</string>
    <string name="sort_bars_distance_desc">Zoradiť podľa vzdialenosti zostupne</string>
    <string name="sort_bars_name_asc">Zoradiť podľa názvu vzostupne</string>
    <string name="sort_bars_name_desc">Zoradiť podľa názvu zostupne</string>
    <string name="fill_name_password">Vyplňte prihlasovacie meno a heslo</string>
    <string name="passwords_be_same">Heslá sa musia zhodovať</string>
    <string name="show_followers">Zobraziť sledovateľov</string>
    <string name="friends">Priatelia</string>
    <string name="followers">Sledovatelia</string>
    <string name="friend_adding">Pridaj pria</string>
    <string name="bar_detail">Detail baru</string>
    <string name="bar_list">Zoznam barov</string>
    <string name="tag_bars_list">Zoznam barov v okolí</string>
    <string name="tag">Označiť</string>
    <string name="friend_item_icon">friend item icon</string>
    <string name="visitor_count_string">Počet priateľov</string>
    <string name="print_location">(%2f, %2f)</string>
    <string name="phone_number">telefónne číslo</string>
    <string name="distance">Vzdialenosť</string>
    <string name="delete_friend">Vymazať priateľa</string>
    <string name="friends_count">Počet návštevníkov</string>
    <string name="geofence_added">Geofence bolo úspešne pridané.</string>
    <string name="geofence_failed">Zlyhanie vytvorenia Geofence.</string>
    <string name="geofence_background">Vyžaduje sa pozadie lokácie</string>
    <string name="allow_location">Povoliť polohu na pozadí (všetky časy) na zistenie, kedy opustíte bar.</string>
    <string name="geofence_failed_permissions">Geofence zlyhal, povolenia neboli udelené.</string>
    <string name="background_location_access_denied">pozadie lokácie zamietnuté</string>
    <string name="access_location_denied">Prístup k lokácii zamietnutý.</string>
    <string name="access_approximate_location">Prístup iba k približnej polohe</string>
    <string name="fill_friend_name">Vyplňte meno priateľa.</string>

</resources>