<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/logout_action"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort_bars_name_asc_action"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_bars_name_asc"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/sort_bars_name_desc_action"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_bars_name_desc"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/sort_users_count_asc_action"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_bars_users_count_asc"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/sort_users_count_desc_action"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_bars_users_count_desc"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/sort_bars_distance_asc_action"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_bars_distance_asc"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/sort_bars_distance_desc_action"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_bars_distance_desc"
        app:showAsAction="collapseActionView"/>



</menu>