<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddFriendFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/add_friend_data"
            style="@style/Widget.Zadanie.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_friend_data"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/friend_login_name"
            style="@style/Widget.Zadanie.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_friend_login"
            app:layout_constraintTop_toBottomOf="@id/add_friend_data">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:text="@string/add_friend"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/friend_login_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>